<resources>
    <string name="app_name">My Application</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="chinese">Chinese</string>
    <string name="japanese">Japanese</string>
    <string name="russian">Russian</string>
    <string name="spanish">Spanish</string>
    <string name="hello_world">Hello World</string>
    <string name="sonyliv">SonyLiv</string>
</resources>